finaliza update post
